--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
     <title>Presentation Card</title>
   </head>
   <body>
+    <nav>
+      <div class="container">
+        <img src="img/logo.png" alt="logo" class="logo" />
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </nav>
     <div class="profile-card">
       <div class="top-section">
         <i class="message fas fa-envelope"></i>
