--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <nav>
       <div class="container">
-        <img src="img/logo.png" alt="logo" class="logo" />
-        <nav>
+        <!-- <img src="img/logo.png" alt="logo" class="logo" /> -->
+        <header>
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -28,7 +28,7 @@
           </ul>
         </nav>
       </div>
-    </nav>
+    </header>
     <div class="profile-card">
       <div class="top-section">
         <i class="message fas fa-envelope"></i>
