--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="author" content="Moises Hdez" />
-    <meta
-      name="description"
-      content="Presentation card for my website in GitHub"
-    />
+    <meta name="description" content="Presentation card for my website in GitHub" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
@@ -15,46 +19,82 @@
     <title>Presentation Card</title>
   </head>
   <body>
-    <nav>
-      <div class="container">
-        <!-- <img src="img/logo.png" alt="logo" class="logo" /> -->
-        <header>
+    <!-- navigation bar -->
+    <div class="nav">
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container">
+            <a class="navbar-brand" href="#">MOVIE</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#"
+                  >Home <span class="sr-only">(current)</span></a
+                >
+                <a class="nav-item nav-link" href="#">Fotos</a>
+                <a class="nav-item nav-link" href="#">Soporte</a>
+                <a class="nav-item nav-link" href="#" tabindex="-1" aria-disabled="true">Blog</a>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </header>
+    </div>
+    <!-- <header>
+      <div class="contenedor">
+        <img src="img/logo.png" alt="logo" class="logo" />
+        <nav>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Fotos</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Soporte</a></li>
+            <li><a href="#">Contacto</a></li>
           </ul>
         </nav>
       </div>
-    </header>
-    <div class="profile-card">
-      <div class="top-section">
-        <i class="message fas fa-envelope"></i>
-        <i class="notif fas fa-bell"></i>
-        <div class="pic">
-          <img src="images/me.jpg" alt="Picture of Moises Hdez" />
+    </header> -->
+
+    <!-- webpage content -->
+
+    <div class="cuerpo-pagina">
+      <div class="contenido-pagina">
+        <div class="profile-card">
+          <div class="top-section">
+            <a href="mailto:armada_zerox@hotmail.com"><i class="message fas fa-envelope"></i></a>
+            <a href="#"><i class="notif fas fa-bell"></i></a>
+            <div class="pic">
+              <img src="imgs/me.png" alt="Picture of Moises Hdez" />
+            </div>
+            <div class="name">Moises Hdez</div>
+            <div class="tag">@moseshdez.github.io/</div>
+          </div>
+          <div class="bottom-section">
+            <div class="social-media">
+              <a href="https://www.youtube.com/user/hcm30/" target="_blank"
+                ><i class="fab fa-youtube"></i
+              ></a>
+              <a href="https://twitter.com/m0yhdez" target="_blank"
+                ><i class="fab fa-twitter"></i
+              ></a>
+              <a href="https://www.instagram.com/m0ys3s/" target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="https://hecm30.blogspot.com/" target="_blank"><i class="fas fa-link"></i></a>
+            </div>
+            <div class="aboutme"><span>Bienvenido</span></div>
+          </div>
         </div>
-        <div class="name">Moises Hdez</div>
-        <div class="tag">@moseshdez.github.io/</div>
-      </div>
-      <div class="bottom-section">
-        <div class="social-media">
-          <a href="https://www.youtube.com/user/hcm30/" target="_blank"
-            ><i class="fab fa-youtube"></i
-          ></a>
-          <a href="https://twitter.com/m0yhdez" target="_blank"
-            ><i class="fab fa-twitter"></i
-          ></a>
-          <a href="https://www.instagram.com/m0ys3s/" target="_blank"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a href="https://hecm30.blogspot.com/" target="_blank"
-            ><i class="fas fa-link"></i
-          ></a>
-        </div>
-        <div class="aboutme"><span>Bienvenido</span></div>
       </div>
     </div>
   </body>
