--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
   </head>
   <body>
     <!-- navigation bar -->
+
     <div class="nav">
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container">
-            <a class="navbar-brand" href="#">MOVIE</a>
+            <a class="navbar-brand" href="#"
+              ><img class="logo" src="./imgs/logo.png" /><span class="brand-text"
+                >Brake|Fix</span
+              ></a
+            >
             <button
               class="navbar-toggler"
               type="button"
@@ -50,20 +55,6 @@
         </nav>
       </header>
     </div>
-    <!-- <header>
-      <div class="contenedor">
-        <img src="img/logo.png" alt="logo" class="logo" />
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Fotos</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Soporte</a></li>
-            <li><a href="#">Contacto</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header> -->
 
     <!-- webpage content -->
 
@@ -92,7 +83,7 @@
               ></a>
               <a href="https://hecm30.blogspot.com/" target="_blank"><i class="fas fa-link"></i></a>
             </div>
-            <div class="aboutme"><span>Bienvenido</span></div>
+            <div class="aboutme"><span>Welcome</span></div>
           </div>
         </div>
       </div>
